done needs some tweek

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
 	<div>Remaining Cash.<div id="totalMoney">$20.00</div></div>
 	<br>
+	<div>Day <div id="day">1</div></div>
 	<div>Today's weather forcast is <span id="weather"></span></div>
-
+	<br>
 	<div>You have,<div id="lemon">0</div>lemons.</div>
 	<br>
 	<input type="number" id="lemonField">lemons<div>    How many Lemons do you want to buy?</div>	
